--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <main>
         <div class="container">
+            <div class="row">
+                <div class="col-1">
 
+                </div>
+            </div>
         </div>
     </main>
 </body>
