--- a/index.html
+++ b/index.html
@@ -10,10 +10,159 @@
 </head>
 <body>
     <main>
-        <div class="container">
+        <!-- Container con 12 colonne (100% / 12) x 1  -->
+        
+        <div class="container first-box">
             <div class="row">
                 <div class="col-1">
-
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+                <div class="col-1">
+                    <div class="box">1 col</div>
+                </div>
+            </div>
+            <!-- Container con tre colonne 2/12 + 5/12 + 5/12 -->
+            <div class="row">
+                <div class="col-2">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+                <div class="col-5">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+                <div class="col-5">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+            </div>
+            <!-- Container una colonna 12/12 -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+            </div>
+            <!-- Container 8/12 + 2/12 + 2/12 -->
+            <div class="row">
+                <div class="col-8">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+            </div>
+            <!-- Container  1/12 + 2/12 + 2/12 + 6/12 + 1/12 -->
+            <div class="row">
+                <div class="col-1">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+                <div class="col-1">
+                    <div class="box">
+                        col
+                    </div>
+                </div>
+            </div>
+            <!-- Container 6/12 + 6/12 -->
+            <!-- con annidamento 2/12 + 2/12 + 8/12 -->
+            <div class="row">
+                <div class="col-6">
+                    <div class="box">
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="green-box">
+                                    col2
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="green-box">
+                                    col2
+                                </div>
+                            </div>
+                            <div class="col-8">
+                                <div class="green-box">
+                                    col8
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <!-- con annidamento 6/12 + 6/12    -->
+                <div class="col-6">
+                    <div class="box">
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="green-box">
+                                    col6
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="green-box">
+                                    col6
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
