creato secondo gruppo di colonne

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <!-- Container con 12 colonne (100% / 12) x 1  -->
         
-        <div class="container first-box">
+        <div class="container space">
             <div class="row">
                 <div class="col-1">
                     <div class="box">1 col</div>
@@ -163,6 +163,93 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="container space">
+            <div class="row">
+                 <!-- Colonna unica  -->
+                <div class="col-12">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <!-- Colonna 1 e 11 -->
+                <div class="col-1">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <div class="col-11">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <!-- Colonna 2 e 10 -->
+                <div class="col-2">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <div class="col-10">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <!-- Colonna 3 e 9 -->
+                <div class="col-3">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <!-- Colonna 4 e 8 -->
+                <div class="col-4">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <div class="col-8">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <!-- Colonna 5 e 7 -->
+                <div class="col-5">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <div class="col-7">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <!-- Colonna 6 e 6 -->
+                <div class="col-6">
+                    <div class="box">
+
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="box">
+
+                    </div>
+                </div>
+               
+            </div>
+
+        </div>
+        <div class="container space">
+            <div class="row">
+                <div class="col-1 col-offset-1 ">
+                   <div class="box">
+                        ciao
+                   </div>
                 </div>
             </div>
         </div>
