aggiunto file bonus e link

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
             </div>
 
         </div>
+        <!-- Piramide off set -->
         <div class="container space">
             <div class="row">
                 <div class="col-1 col-offset-11">
